--- a/Assignment3AddieZiegler/Views/Home/Privacy.cshtml
+++ b/Assignment3AddieZiegler/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Movies";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>List of Movies Here</p>
