--- a/Assignment3AddieZiegler/Views/Home/Index.cshtml
+++ b/Assignment3AddieZiegler/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to the Ultimate Actor and Movie Guide</h1>
+    <p>Discover the best in famous actors and iconic movies.</p>
+    <div>
+        <a href="/Actors" class="btn btn-primary">Explore Famous Actors</a>
+        <a href="/Movies" class="btn btn-secondary">Discover Iconic Movies</a>
+    </div>
 </div>
